<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="4dp"
    app:cardCornerRadius="4dp"
    app:cardElevation="4dp"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_200"
        android:padding="16dp">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/centerHorizontalGuideLine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/centerVerticalGuideLine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_bin_id_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@id/tv_bin_id"
            app:layout_constraintStart_toStartOf="@id/tv_bin_id"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            android:text="@string/bin_id_name" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_bin_id"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/centerVerticalGuideLine"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_bin_id_name"
            tools:text="453455423453345552" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_date_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/tv_date"
            app:layout_constraintStart_toStartOf="@+id/tv_date"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            android:text="@string/bin_date_name" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/centerHorizontalGuideLine"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/centerVerticalGuideLine"
            app:layout_constraintTop_toBottomOf="@id/tv_date_name"
            tools:text="23.06.1995 23:33" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_status_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/tv_status"
            app:layout_constraintStart_toStartOf="@+id/tv_status"
            app:layout_constraintTop_toTopOf="@id/centerHorizontalGuideLine"
            app:layout_constraintVertical_chainStyle="packed"
            android:text="@string/bin_status_name" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_status"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/centerVerticalGuideLine"
            app:layout_constraintTop_toBottomOf="@id/tv_status_name"
            tools:text="Успешно" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>